--- a/irb6640_moveit_config/config/controllers.yaml
+++ b/irb6640_moveit_config/config/controllers.yaml
@@ -2,10 +2,4 @@ controller_list:
   - name: ""
     action_ns: joint_trajectory_action
     type: FollowJointTrajectory
-    joints:
-      - joint_1
-      - joint_2
-      - joint_3
-      - joint_4
-      - joint_5
-      - joint_6
+    joints: [joint_1, joint_2, joint_3, joint_4, joint_5, joint_6]
