update robot model to include vacuum gripper

--- a/irb6640_control/config/irb6640_control.yaml
+++ b/irb6640_control/config/irb6640_control.yaml
@@ -29,3 +29,7 @@ irb6640:
     type: position_controllers/JointPositionController
     joint: joint_6
     pid: {p: 100.0, i: 0.01, d: 10.0}
+  joint6_position_controller:
+    type: position_controllers/JointPositionController
+    joint: link_6_vacuum_gripper
+    pid: {p: 100.0, i: 0.01, d: 10.0}
