--- a/irb6640_moveit_config/config/fake_controllers.yaml
+++ b/irb6640_moveit_config/config/fake_controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: fake_manipulator_controller
+  - name: fake_Manipulator_controller
     joints:
       - joint_1
       - joint_2
@@ -7,3 +7,4 @@ controller_list:
       - joint_4
       - joint_5
       - joint_6
+      - link_6_vacuum_gripper
