--- a/irb6640_control/config/irb6640_arm_controller.yaml
+++ b/irb6640_control/config/irb6640_arm_controller.yaml
@@ -7,6 +7,7 @@ arm_controller:
      - joint_4
      - joint_5
      - joint_6
+     - link_6_vacuum_gripper
   constraints:
       goal_time: 0.6
       stopped_velocity_tolerance: 0.05
@@ -16,6 +17,7 @@ arm_controller:
       joint_4: {trajectory: 0.1, goal: 0.1}
       joint_5: {trajectory: 0.1, goal: 0.1}
       joint_6: {trajectory: 0.1, goal: 0.1}
+      link_6_vacuum_gripper: {trajectory: 0.1, goal: 0.1}
   stop_trajectory_duration: 0.5
   state_publish_rate:  25
   action_monitor_rate: 10
