--- a/irb6640_moveit_config/config/joint_limits.yaml
+++ b/irb6640_moveit_config/config/joint_limits.yaml
@@ -32,3 +32,8 @@ joint_limits:
     max_velocity: 3.3161
     has_acceleration_limits: false
     max_acceleration: 0
+  link_6_vacuum_gripper:
+    has_velocity_limits: true
+    max_velocity: 1
+    has_acceleration_limits: false
+    max_acceleration: 0
