--- a/irb6640_moveit_config/config/controllers.yaml
+++ b/irb6640_moveit_config/config/controllers.yaml
@@ -3,4 +3,4 @@ controller_list:
     action_ns: joint_trajectory_action
     type: FollowJointTrajectory
     default: true
-    joints: [joint_1, joint_2, joint_3, joint_4, joint_5, joint_6, link_6_vacuum_gripper]
+    joints: [joint_1, joint_2, joint_3, joint_4, joint_5, joint_6]
