--- a/irb6640_moveit_config/config/fake_controllers.yaml
+++ b/irb6640_moveit_config/config/fake_controllers.yaml
@@ -7,4 +7,6 @@ controller_list:
       - joint_4
       - joint_5
       - joint_6
+  - name: fake_End-effector_controller
+    joints:
       - link_6_vacuum_gripper
