--- a/irb6640_moveit_config/CMakeLists.txt
+++ b/irb6640_moveit_config/CMakeLists.txt
@@ -1,7 +1,16 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(irb6640_moveit_config)
 
-find_package(catkin REQUIRED)
+add_compile_options(-std=c++11)
+
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  std_msgs)
+
+include_directories(include ${catkin_INCLUDE_DIRS})
+add_executable(irb6640_moveit_config src/vacuum_gripper_ctrl.cpp)
+target_link_libraries(irb6640_moveit_config ${catkin_LIBRARIES})
 
 catkin_package()
 
