--- a/path_planning/package.xml
+++ b/path_planning/package.xml
@@ -19,6 +19,7 @@
   <build_depend>moveit_planners_ompl</build_depend>
   <build_depend>moveit_ros_move_group</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>ar_track_alvar</build_depend>
 
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_planners_ompl</run_depend>
@@ -29,6 +30,7 @@
   <run_depend>moveit_ros_perception</run_depend>
   <run_depend>interactive_markers</run_depend>
   <run_depend>moveit_visual_tools</run_depend>
+  <run_depend>ar_track_alvar</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
